Fixed bug #80194

We should strip NOPs from unreachable_free blocks as well, to make
sure that the free really is the first op.